--- a/index.html
+++ b/index.html
@@ -178,10 +178,17 @@
             <section id="page-questions" class="page">
                 <div class="page-header">
                     <h1>問題管理</h1>
-                    <button class="btn btn-primary" id="addQuestionBtn">
-                        <span class="btn-icon">➕</span>
-                        新規問題登録
-                    </button>
+                    <div class="page-header-actions">
+                        <input type="file" id="csvImportFile" accept=".csv" hidden>
+                        <button class="btn btn-secondary" id="importCsvBtn">
+                            <span class="btn-icon">📥</span>
+                            CSVインポート
+                        </button>
+                        <button class="btn btn-primary" id="addQuestionBtn">
+                            <span class="btn-icon">➕</span>
+                            新規問題登録
+                        </button>
+                    </div>
                 </div>
 
                 <div class="filter-bar">
