Add builtin questions (125 questions from H28)

--- a/index.html
+++ b/index.html
@@ -413,6 +413,7 @@
     <div class="toast-container" id="toastContainer"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="js/builtin-questions.js"></script>
     <script src="js/db.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/questions.js"></script>
