Improve mastery display: question rows x subject columns, year filter

--- a/index.html
+++ b/index.html
@@ -361,7 +361,12 @@
                 </div>
 
                 <div class="stats-details">
-                    <h3>達成度（王冠）</h3>
+                    <div class="mastery-header">
+                        <h3>達成度</h3>
+                        <select id="masteryYearFilter" class="select">
+                            <!-- 動的に生成 -->
+                        </select>
+                    </div>
                     <p class="stats-legend">
                         <span class="crown crown-gold">♛</span> 2回連続正解
                         <span class="crown crown-silver">♛</span> 1回正解
