Add memo feature for personal notes on questions

--- a/index.html
+++ b/index.html
@@ -169,6 +169,12 @@
                             解説がここに表示されます。
                         </div>
                     </div>
+                    <div class="memo-section">
+                        <h3>📝 自分メモ</h3>
+                        <textarea id="questionMemo" class="textarea memo-textarea"
+                            placeholder="この問題に関するメモを入力してください（端末に保存されます）" rows="3"></textarea>
+                        <button class="btn btn-secondary btn-small" id="saveMemo">メモを保存</button>
+                    </div>
                     <div class="answer-actions">
                         <button class="btn btn-ghost" id="editCurrentQuestion">
                             <span class="btn-icon">✎</span> 問題を編集
