--- a/index.html
+++ b/index.html
@@ -399,6 +399,12 @@
                 </div>
 
                 <div class="mastery-controls">
+                    <div class="mastery-filter">
+                        <select id="masteryYearFilter" class="select">
+                            <option value="all">すべての年度</option>
+                            <!-- 動的に生成 -->
+                        </select>
+                    </div>
                     <p class="stats-legend">
                         <span class="crown crown-gold">♛</span> 2回連続正解
                         <span class="crown crown-silver">♛</span> 1回正解
