fix: メモ同期のnullチェック追加、プレースホルダーテキスト修正

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <div class="memo-section">
                         <h3>📝 自分メモ</h3>
                         <textarea id="questionMemo" class="textarea memo-textarea"
-                            placeholder="この問題に関するメモを入力してください（端末に保存されます）" rows="3"></textarea>
+                            placeholder="この問題に関するメモを入力してください（ログイン中は他の端末と同期されます）" rows="3"></textarea>
                         <button class="btn btn-secondary btn-small" id="saveMemo">メモを保存</button>
                     </div>
                     <div class="answer-actions">
