feat: add default color reset button to format toolbar

--- a/index.html
+++ b/index.html
@@ -211,6 +211,8 @@
                                 onclick="Questions.applyFormat('red')">A</button>
                             <button type="button" class="format-btn format-btn-blue" title="青字"
                                 onclick="Questions.applyFormat('blue')">A</button>
+                            <button type="button" class="format-btn format-btn-default" title="デフォルト色"
+                                onclick="Questions.applyFormat('default')">A</button>
                         </div>
                         <div id="questionMemo" class="textarea richtext-editor memo-textarea" contenteditable="true"
                             data-placeholder="この問題に関するメモを入力してください（ログイン中は他の端末と同期されます）"></div>
@@ -302,6 +304,7 @@
                                 <button type="button" class="format-btn format-btn-bold" title="太字">B</button>
                                 <button type="button" class="format-btn format-btn-red" title="赤字">A</button>
                                 <button type="button" class="format-btn format-btn-blue" title="青字">A</button>
+                                <button type="button" class="format-btn format-btn-default" title="デフォルト色">A</button>
                             </div>
                             <div id="qText" class="textarea richtext-editor" contenteditable="true"
                                 data-placeholder="問題文を入力してください"></div>
@@ -375,6 +378,7 @@
                                 <button type="button" class="format-btn format-btn-bold" title="太字">B</button>
                                 <button type="button" class="format-btn format-btn-red" title="赤字">A</button>
                                 <button type="button" class="format-btn format-btn-blue" title="青字">A</button>
+                                <button type="button" class="format-btn format-btn-default" title="デフォルト色">A</button>
                             </div>
                             <div id="qExplanation" class="textarea richtext-editor" contenteditable="true"
                                 data-placeholder="解説を入力してください"></div>
