style: ユーザー提供のPNGアイコンを追加・適用

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="theme-color" content="#2a4070">
     <title>一級建築士 学習アプリ</title>
     <link rel="manifest" href="manifest.json">
-    <link rel="icon" type="image/svg+xml" href="icons/icon.svg">
-    <link rel="apple-touch-icon" href="icons/icon.svg">
+    <link rel="icon" type="image/png" href="icons/Gemini_Generated_Image_c880t2c880t2c880.png">
+    <link rel="apple-touch-icon" href="icons/Gemini_Generated_Image_c880t2c880t2c880.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
