style: アイコンを修正版に差し替え、ナビバー左上にも適用

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="theme-color" content="#2a4070">
     <title>一級建築士 学習アプリ</title>
     <link rel="manifest" href="manifest.json">
-    <link rel="icon" type="image/png" href="icons/Gemini_Generated_Image_c880t2c880t2c880.png">
-    <link rel="apple-touch-icon" href="icons/Gemini_Generated_Image_c880t2c880t2c880.png">
+    <link rel="icon" type="image/png" href="icons/Gemini_Generated_Image_t78is6t78is6t78i.png">
+    <link rel="apple-touch-icon" href="icons/Gemini_Generated_Image_t78is6t78is6t78i.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
@@ -21,7 +21,8 @@
         <!-- ナビゲーション -->
         <nav class="nav">
             <div class="nav-brand">
-                <span class="nav-icon">🏛️</span>
+                <img class="nav-icon" src="icons/Gemini_Generated_Image_t78is6t78is6t78i.png" alt="アイコン"
+                    style="width:32px;height:32px;border-radius:6px;">
                 <span class="nav-title">一級建築士 学習アプリ</span>
             </div>
             <button class="nav-menu-btn" id="menuBtn" aria-label="メニュー">
