アプリ名を一級建築士試験 過去問学習アプリ Architest に変更

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="一級建築士試験の過去問題を使って効率的に学習できるアプリ">
+    <meta name="description" content="一級建築士試験の過去問題を使って効率的に学習できるアプリ「Architest」">
     <meta name="theme-color" content="#2a4070">
-    <title>一級建築士 学習アプリ</title>
+    <title>一級建築士試験 過去問学習アプリ「Architest」</title>
     <link rel="manifest" href="manifest.json">
     <link rel="icon" type="image/png" href="icons/Gemini_Generated_Image_twt0eftwt0eftwt0.png">
     <link rel="apple-touch-icon" href="icons/Gemini_Generated_Image_twt0eftwt0eftwt0.png">
@@ -23,7 +23,7 @@
             <div class="nav-brand">
                 <img class="nav-icon" src="icons/Gemini_Generated_Image_twt0eftwt0eftwt0.png" alt="アイコン"
                     style="width:32px;height:32px;border-radius:6px;">
-                <span class="nav-title">一級建築士 学習アプリ</span>
+                <span class="nav-title">Architest</span>
             </div>
             <button class="nav-menu-btn" id="menuBtn" aria-label="メニュー">
                 <span></span>
@@ -53,8 +53,8 @@
             <!-- ホーム画面 -->
             <section id="page-home" class="page active">
                 <div class="home-header">
-                    <h1>一級建築士試験 学習アプリ</h1>
-                    <p class="subtitle">過去問題で効率的に学習しましょう</p>
+                    <h1>Architest</h1>
+                    <p class="subtitle">一級建築士試験 過去問学習アプリ</p>
                 </div>
 
                 <div class="stats-overview">
@@ -546,7 +546,7 @@
                 <div class="settings-section">
                     <h3>アプリについて</h3>
                     <div class="about-info">
-                        <p><strong>一級建築士 学習アプリ</strong></p>
+                        <p><strong>一級建築士試験 過去問学習アプリ「Architest」</strong></p>
                         <p>バージョン 1.0.0</p>
                         <p>過去問題を使って効率的に学習できるPWAアプリです。</p>
                     </div>
